# Yt-views-Predict

./: README.md  model_youtube_views.pkl  pyproject.toml
Notebook/: main.ipynb
app/: app.py  main.py
app/web/: index.html  scripts.js  style.css
